objects/ccpe_r__Rate__c.object
<CustomObject>
    <description>Rate object Created for a user against a Project or Project Task</description>
    <fields>
        <fullName>ccpe_r__Hash__c</fullName>
        <formula>ccpe_r__User__c &amp; ccpe_r__Project__c &amp; ccpe_r__Project_Phase__c &amp; ccpe_r__Project_Task__c</formula>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Initial_Rate__c</fullName>
        <label>Initial Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Override_Rate__c</fullName>
        <label>Override Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Standard_Cost__c</fullName>
        <formula>ccpe_r__User__r.ccpe_r__Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Standard_Rate__c</fullName>
        <description>This field has been deprecated in favour of the Initial Rate field.</description>
        <formula>ccpe_r__User__r.ccpe_r__Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deprecated (Standard Rate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__System_Cost__c</fullName>
        <formula>ccpe_r__User__r.ccpe_r__Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost (System)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__System_Rate__c</fullName>
        <formula>ccpe_r__User__r.ccpe_r__Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate (System)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate</label>
    <listViews>
        <fullName>ccpe_r__All</fullName>
        <columns>NAME</columns>
        <columns>ccpe_r__User__c</columns>
        <columns>ccpe_r__Initial_Rate__c</columns>
        <columns>ccpe_r__Override_Rate__c</columns>
        <columns>ccpe_r__Standard_Cost__c</columns>
        <columns>ccpe_r__Project__c</columns>
        <columns>ccpe_r__Project_Phase__c</columns>
        <columns>ccpe_r__Project_Task__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RATE-{0}</displayFormat>
        <label>Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ccpe_r__Project_Phase_Task_One_Only</fullName>
        <active>true</active>
        <description>Only one of the Project/Project Phase/Project Task lookups should be selected</description>
        <errorConditionFormula>IF(ISBLANK(ccpe_r__Project__c), 0, 1) +
IF(ISBLANK(ccpe_r__Project_Phase__c), 0, 1) +
IF(ISBLANK(ccpe_r__Project_Task__c), 0, 1)
!= 1</errorConditionFormula>
        <errorMessage>Exactly one Project, Project Phase or Project Task should be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccpe_r__User_Owner_Same</fullName>
        <active>true</active>
        <description>The User Lookup must match the Owner of the record.</description>
        <errorConditionFormula>OwnerId != ccpe_r__User__c</errorConditionFormula>
        <errorDisplayField>ccpe_r__User__c</errorDisplayField>
        <errorMessage>The user must be the same as the owner of the record</errorMessage>
    </validationRules>
</CustomObject>